k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: streaming.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: clusterip-backend
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterip-frontend
            port:
              number: 8081
